# json-schema-validator

./: BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-json-schema-validator  bazel-out  bazel-testlogs
example/: BUILD.bazel  format.cpp  json-schema-validate.cpp  readme.cpp
src/: BUILD.bazel  json-validator.cpp  string-format-check.cpp
src/nlohmann/: BUILD.bazel
test/: binary-validation.cpp  errors.cpp  id-ref.cpp  issue-189-default-values.cpp  issue-243-root-default-values.cpp  issue-25-default-values.cpp  issue-70-root-schema-constructor.cpp  issue-98.cpp  string-format-check-test.cpp  uri.cpp
