load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
  name = "format",
  srcs = [
    "format.cpp",
  ],
  deps = [
    "//:json_schema_validator",
  ]
)

cc_binary(
  name = "json_schema_validate",
  srcs = [
    "json-schema-validate.cpp",
  ],
  deps = [
    "//src/nlohmann:json_schema",
    "//src:json_schema_validator",
    "@nlohmann",
  ]
)

cc_binary(
  name = "readme",
  srcs = [
    "readme.cpp",
  ],
  deps = [
    "//src/nlohmann:json_schema",
    "//src:json_schema_validator",
    "@nlohmann",
  ]
)